[project]
name = "pg_anon"
version = "1.9.3"
description = "PostgreSQL anonymization tool."
authors = [
    {name="Tantor Labs", email="tantor@tantorlabs.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies=[
    "aioprocessing>=2.0.1,<3.0",
    "asyncpg>=0.29,<1.0",
    "async-timeout>=4.0.3,<5.0",
    "prettytable>=3.17.0",
    "pyyaml>=6.0.3,<7.0",
    "concurrent-log-handler>=0.9.28,<0.10.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.113,<1.0",
    "uvicorn[standard]>=0.38",
    "aiohttp>=3.13.2",
]
dev = [
    "build>=1.0",
]

[build-system]
requires = ["setuptools>=78"]
build-backend = "setuptools.build_meta"

[project.scripts]
pg_anon = "pg_anon.__main__:main"
pg_anon_api = "rest_api.__main__:main"

[tool.setuptools]
include-package-data = false
packages.find.include = ["pg_anon", "pg_anon.*", "rest_api", "rest_api.*"]
packages.find.exclude = ["tests"]
