[project]
name = "pg_anon"
version = "1.9.3"
description = "PostgreSQL anonymization tool."
authors = [
    {name="Tantor Labs", email="tantor@tantorlabs.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies=[
    "aioprocessing>=2.0.1,<3.0",
    "asyncpg>=0.29,<1.0",
    "async-timeout>=4.0.3,<5.0",
    "prettytable>=3.17.0",
    "pyyaml>=6.0.3,<7.0",
    "concurrent-log-handler>=0.9.28,<0.10.0",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]>=0.113,<1.0",
    "aiohttp>=3.13.2",
]
dev = [
    "build>=1.0",
    "ruff>=0.15",
    "mypy>=1.19",
    "pydantic",
]

[build-system]
requires = ["setuptools>=78"]
build-backend = "setuptools.build_meta"

[project.scripts]
pg_anon = "pg_anon.__main__:main"
pg_anon_api = "rest_api.__main__:main"

[tool.setuptools]
include-package-data = false
packages.find.include = ["pg_anon", "pg_anon.*", "rest_api", "rest_api.*"]
packages.find.exclude = ["tests"]

[tool.ruff]
line-length = 120
show-fixes = true
target-version = "py311"
output-format = "full"
exclude = [
    ".git",
    ".idea",
    "mypy_cache",
    "venv",
]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins (https://docs.astral.sh/ruff/rules/#flake8-builtins-a)
    "ANN",   # flake8-annotations (https://docs.astral.sh/ruff/rules/#flake8-annotations-ann)
    "ARG",   # flake8-unused-arguments (https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg)
    "ASYNC", # flake8-async-async (https://docs.astral.sh/ruff/rules/#flake8-async-async)
    "B",     # flake8-bugbear (https://docs.astral.sh/ruff/rules/#flake8-bugbear-b)
    "C4",    # flake8-comprehensions (https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4)
    "C90",   # mccabe (https://docs.astral.sh/ruff/rules/#mccabe-c90)
    "COM",   # flake8-commas (https://docs.astral.sh/ruff/rules/#flake8-commas-com)
    "D",     # pydocstyle (https://docs.astral.sh/ruff/rules/#pydocstyle-d)
    "DTZ",   # flake8-datetimez (https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz)
    "E",     # pycodestyle error (https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "EM",    # flake8-errmsg (https://docs.astral.sh/ruff/rules/#flake8-errmsg-em)
    "ERA",   # eradicate (https://docs.astral.sh/ruff/rules/#eradicate-era)
    "F",     # pyflakes (https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "G",     # flake8-logging-format (https://docs.astral.sh/ruff/rules/#flake8-logging-format-g)
    "I",     # isort (https://docs.astral.sh/ruff/rules/#isort-i)
    "INT",   # flake8-gettext (https://docs.astral.sh/ruff/rules/#flake8-gettext-int)
    "N",     # pep8-naming (https://docs.astral.sh/ruff/rules/#pep8-naming-n)
    "PIE",   # flake8-pie (https://docs.astral.sh/ruff/rules/#flake8-pie-pie)
    "PL",    # pylint (https://docs.astral.sh/ruff/rules/#pylint-pl)
    "PLC",   # pylint convention (https://docs.astral.sh/ruff/rules/#convention-plc)
    "PLE",   # pylint error (https://docs.astral.sh/ruff/rules/#error-ple)
    "PLR",   # pylint refactor (https://docs.astral.sh/ruff/rules/#refactor-plr)
    "PLW",   # pylint warning (https://docs.astral.sh/ruff/rules/#warning-plw)
    "PYI",   # flake8-pyi (https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi)
    "RET",   # flake8-return (https://docs.astral.sh/ruff/rules/#flake8-return-ret)
    "RSE",   # flake8-raise (https://docs.astral.sh/ruff/rules/#flake8-raise-rse)
    "RUF",   # ruff-specific-rules (https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf)
    "S",     # flake8-bandit (https://docs.astral.sh/ruff/rules/#flake8-bandit-s)
    "SIM",   # flake8-simplify (https://docs.astral.sh/ruff/rules/#flake8-simplify-sim)
    "TRY",   # tryceratops (https://docs.astral.sh/ruff/rules/#tryceratops-try)
    "Q",     # flake8-quotes (https://docs.astral.sh/ruff/rules/#flake8-quotes-q)
    "UP",    # pyupgrade (https://docs.astral.sh/ruff/rules/#pyupgrade-up)
    "W",     # pycodestyle warning (https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "FA",    # flake8-future-annotations (https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa)
    "T10",   # flake8-debugger (https://docs.astral.sh/ruff/rules/#flake8-debugger-t10)
    "ISC",   # flake8-implicit-str-concat (https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc)
    "ICN",   # flake8-import-conventions (https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn)
    "LOG",   # flake8-logging (https://docs.astral.sh/ruff/rules/#flake8-logging-log)
    "INP",   # flake8-no-pep420 (https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp)
    "T20",   # flake8-print (https://docs.astral.sh/ruff/rules/#flake8-print-t20)
    "SLF",   # flake8-self (https://docs.astral.sh/ruff/rules/#flake8-self-slf)
    "SLOT",  # flake8-slots (https://docs.astral.sh/ruff/rules/#flake8-slots-slot)
    "TID",   # flake8-tidy-imports (https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid)
    "TC",    # flake8-type-checking (https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc)
    "PTH",   # flake8-use-pathlib (https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth)
    "PERF",  # perflint (https://docs.astral.sh/ruff/rules/#perflint-perf)
    "PGH",   # pygrep-hooks (https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh)
    "FURB",  # refurb (https://docs.astral.sh/ruff/rules/#refurb-furb)
    "FAST",  # fastapi (https://docs.astral.sh/ruff/rules/#fastapi-fast)
]
ignore = [
    "DTZ002",
    "DTZ005",
    "EM101",
    "EM102",
    "TRY003",
    "RUF002",
    "RUF003",
    "PLW1508",
    "COM812",
    "SIM117",
    "T201",
    "ASYNC220",
    "ASYNC240",
    "S603",
    "S608",
    "E501",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.isort]
known-local-folder = ["pg_anon", "rest_api"]
split-on-trailing-comma = false
force-single-line = false
case-sensitive = false
order-by-type = false

[tool.mypy]
plugins = "pydantic.mypy"

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
