[project]
name = "pg_anon"
version = "1.9.5"
description = "PostgreSQL anonymization tool."
authors = [
    {name="Tantor Labs", email="tantor@tantorlabs.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies=[
    "aioprocessing>=2.0.1,<3.0",
    "asyncpg>=0.29,<1.0",
    "async-timeout>=4.0.3,<5.0",
    "prettytable>=3.17.0",
    "pyyaml>=6.0.3,<7.0",
    "concurrent-log-handler>=0.9.28,<0.10.0",
]

[project.optional-dependencies]
api = [
    "fastapi[standard]>=0.113,<1.0",
    "aiohttp>=3.13.2",
]
dev = [
    "build>=1.0",
    "ruff>=0.15",
    "mypy>=1.19",
    "pydantic",
    "pytest>=9.0.2,<10.0",
    "pytest-asyncio>=1.3,<2.0",
]

[build-system]
requires = ["setuptools>=78"]
build-backend = "setuptools.build_meta"

[project.scripts]
pg_anon = "pg_anon.__main__:main"
pg_anon_api = "pg_anon.rest_api.__main__:main"

[tool.setuptools]
include-package-data = false
packages.find.include = ["pg_anon", "pg_anon.*"]
packages.find.exclude = ["tests"]

[tool.setuptools.package-data]
pg_anon = ["init.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/suites"]
pythonpath = ["."]
norecursedirs = ["input_dict", "expected", "output", "output_dict"]

[tool.ruff]
line-length = 120
show-fixes = true
target-version = "py311"
output-format = "full"
extend-exclude = [
    ".idea",
    "tests/suites/*/expected/",
    "tests/suites/*/input_dict/",
    "tests/suites/*/output_dict/",
]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins (https://docs.astral.sh/ruff/rules/#flake8-builtins-a)
    "ANN",   # flake8-annotations (https://docs.astral.sh/ruff/rules/#flake8-annotations-ann)
    "ARG",   # flake8-unused-arguments (https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg)
    "ASYNC", # flake8-async-async (https://docs.astral.sh/ruff/rules/#flake8-async-async)
    "B",     # flake8-bugbear (https://docs.astral.sh/ruff/rules/#flake8-bugbear-b)
    "C4",    # flake8-comprehensions (https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4)
    "C90",   # mccabe (https://docs.astral.sh/ruff/rules/#mccabe-c90)
    "COM",   # flake8-commas (https://docs.astral.sh/ruff/rules/#flake8-commas-com)
    "D",     # pydocstyle (https://docs.astral.sh/ruff/rules/#pydocstyle-d)
    "DTZ",   # flake8-datetimez (https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz)
    "E",     # pycodestyle error (https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "ERA",   # eradicate (https://docs.astral.sh/ruff/rules/#eradicate-era)
    "F",     # pyflakes (https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "FA",    # flake8-future-annotations (https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa)
    "FAST",  # fastapi (https://docs.astral.sh/ruff/rules/#fastapi-fast)
    "G",     # flake8-logging-format (https://docs.astral.sh/ruff/rules/#flake8-logging-format-g)
    "I",     # isort (https://docs.astral.sh/ruff/rules/#isort-i)
    "ICN",   # flake8-import-conventions (https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn)
    "LOG",   # flake8-logging (https://docs.astral.sh/ruff/rules/#flake8-logging-log)
    "N",     # pep8-naming (https://docs.astral.sh/ruff/rules/#pep8-naming-n)
    "PGH",   # pygrep-hooks (https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh)
    "PTH",   # flake8-use-pathlib (https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth)
    "Q",     # flake8-quotes (https://docs.astral.sh/ruff/rules/#flake8-quotes-q)
    "S",     # flake8-bandit (https://docs.astral.sh/ruff/rules/#flake8-bandit-s)
    "RET",   # flake8-return (https://docs.astral.sh/ruff/rules/#flake8-return-ret)
    "RSE",   # flake8-raise (https://docs.astral.sh/ruff/rules/#flake8-raise-rse)
    "SIM",   # flake8-simplify (https://docs.astral.sh/ruff/rules/#flake8-simplify-sim)
    "SLF",   # flake8-self (https://docs.astral.sh/ruff/rules/#flake8-self-slf)
    "T10",   # flake8-debugger (https://docs.astral.sh/ruff/rules/#flake8-debugger-t10)
    "T20",   # flake8-print (https://docs.astral.sh/ruff/rules/#flake8-print-t20)
    "TC",    # flake8-type-checking (https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc)
    "TRY",   # tryceratops (https://docs.astral.sh/ruff/rules/#tryceratops-try)
    "UP",    # pyupgrade (https://docs.astral.sh/ruff/rules/#pyupgrade-up)
    "W",     # pycodestyle warning (https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
]
ignore = [
    "ASYNC220", # blocking call in async function
    "ASYNC240", # sync context manager in async code
    "COM812",   # missing trailing comma
    "D100",     # missing docstring in module
    "D101",     # missing docstring in public class
    "D104",     # missing docstring in package (__init__.py)
    "D105",     # missing docstring in magic method
    "D106",     # missing docstring in nested class
    "D107",     # missing docstring in __init__ method
    "D203",     # blank line required before class docstring (conflicts with D211)
    "D213",     # summary line must start on second line (conflicts with D212)
    "D417",     # require descriptions for function arguments in docstrings
    "DTZ002",   # datetime.now() used without timezone
    "DTZ005",   # datetime.fromtimestamp() used without timezone
    "E501",     # line too long
    "S603",     # subprocess call with potential shell injection
    "S608",     # possible SQL injection via string formatting
    "SIM117",   # nested with statements can be merged
    "T201",     # print() found
    "TRY003",   # complex message formatting directly in raise
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D102",  # missing docstring in public method (test methods are self-documenting)
    "D103",  # missing docstring in public function (test methods are self-documenting)
    "S101",  # use of assert (expected in tests)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.isort]
known-local-folder = ["pg_anon"]
split-on-trailing-comma = false
force-single-line = false
case-sensitive = false
order-by-type = false

[tool.mypy]
plugins = "pydantic.mypy"

namespace_packages = true
explicit_package_bases = true

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["aioprocessing", "asyncpg", "yaml"]
ignore_missing_imports = true
